# sentris

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 38262302f50b_initial_schema.py  7e4b6c9a1d3f_search_vector_triggers.py  9c1a2f6e7b4d_ai_entity_type_add_ioc.py
backend/app/: main.py
backend/app/ai/: guardrails.py  prompt_loader.py  router.py  structured.py
backend/app/ai/prompts/: alert_investigate_v1.j2  alert_mitre_v1.j2  case_report_v1.j2  (+7 more)
backend/app/core/: config.py  demo_identity.py  deps.py  errors.py  logging.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/integrations/: abusech.py  abuseipdb.py  base.py  greynoise.py  http_helpers.py  investigate_registry.py  mock_provider.py  otx.py  provider_health.py  registry.py  shodan.py  urlscan.py  virustotal.py  whois.py
backend/app/models/: __init__.py  ai_analysis.py  alert.py  asset.py  audit_log.py  automation.py  base.py  case.py  comment.py  enums.py  integration.py  ioc.py  mitre.py  notification.py  organization.py  rbac.py  report.py  saved_search.py  tag.py  timeline.py  user.py
backend/app/repositories/: ai_analysis.py  alert.py  asset.py  audit_log.py  case.py  ioc.py  metrics.py  mitre.py  rbac.py  refresh_token.py  report.py  saved_search.py  user.py
backend/app/schemas/: ai.py  ai_analysis.py  alert.py  asset.py  audit_log.py  auth.py  case.py  comment.py  common.py  integrations.py  investigate.py  ioc.py  metrics.py  mitre.py  report.py  search.py  timeline.py  user.py
backend/app/services/: ai.py  alert.py  asset.py  auth.py  case.py  enrichment.py  indicator_detect.py  investigate.py  ioc.py  metrics.py  mitre.py  mitre_rules.py  search.py
backend/app/workers/: celery_app.py  db.py
backend/tests/: conftest.py  test_ai.py  test_alerts.py  test_assets.py  test_auth.py  test_cases.py  test_enrichment.py  test_health.py  test_investigate.py  test_investigate_provider_health.py  test_investigate_providers.py  test_iocs.py  test_metrics.py  test_mitre.py  test_search.py
(+67 files in other folders)
