[project]
name = "sentris-backend"
version = "0.1.0"
description = "Sentris — AI-powered SOC analyst platform (API + workers)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "structlog>=24.4",
    "passlib[argon2]>=1.7",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "slowapi>=0.1.9",
    "jinja2>=3.1",
    "litellm>=1.52",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "factory-boy>=3.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI's `Depends(...)` in a default argument is the documented,
# idiomatic pattern (not the mutable-default-argument bug this rule targets).
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
# The app's SQLAlchemy async engine (app/db/session.py) is a module-level
# singleton bound to whichever event loop is running when it's first used.
# pytest-asyncio's default per-function loop scope would spin up a fresh
# loop per test, orphaning the engine's pooled connections after the first
# test ("attached to a different loop" / "Event loop is closed"). Pinning
# both scopes to "session" keeps one loop for the whole run.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
